--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "express": "^5.0.0-alpha.6",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "graphql-depth-limit": "^1.1.0",
     "graphql-tools": "^3.0.5",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
