--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
     "mysql2": "^1.5.3",
+    "nodemailer": "^4.6.7",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0"
   }
