--- a/package.json
+++ b/package.json
@@ -57,15 +57,18 @@
     "dotenv": "^6.0.0",
     "express": "^5.0.0-alpha.6",
     "express-graphql": "^0.6.12",
+    "fs-extra": "^7.0.0",
     "graphql": "^0.13.2",
     "graphql-depth-limit": "^1.1.0",
-    "graphql-tools": "^3.0.5",
+    "graphql-tools": "^3.1.1",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
-    "mysql2": "^1.5.3",
-    "nodemailer": "^4.6.7",
+    "mysql2": "^1.6.1",
+    "nodemailer": "^4.6.8",
     "sequelize": "^4.38.0",
-    "sequelize-cli": "^4.0.0"
+    "sequelize-cli": "^4.0.0",
+    "sharp": "^0.20.5",
+    "uuid": "^3.3.2"
   }
 }
