--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "standard-version": "^4.4.0"
   },
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
