--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,9 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - v1-dependencies-{{ checksum "yarn.lock" }}
           - v1-dependencies-
+      - run: yarn install
       - run: yarn build:prod
       - run:
           name: Deploy to beta.ravens-scans.com
