--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.6.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint": "^5.7.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^0.14.3",
+    "husky": "^1.1.2",
     "jest": "^23.6.0",
     "nodemon": "~1.18.4",
-    "prettier": "^1.14.2",
-    "pretty-quick": "^1.6.0",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.8.0",
     "sequelize-test-utils": "^0.3.0",
     "standard-version": "^4.4.0"
   },
@@ -55,22 +55,23 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "express": "^5.0.0-alpha.6",
     "express-graphql": "^0.6.12",
+    "feed": "^2.0.1",
     "fs-extra": "^7.0.0",
     "graphql": "^14.0.2",
     "graphql-date": "^1.0.3",
     "graphql-depth-limit": "^1.1.0",
-    "graphql-tools": "^3.1.1",
+    "graphql-tools": "^4.0.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.1",
-    "multer": "^1.3.1",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
-    "sequelize": "^4.38.1",
-    "sequelize-cli": "^4.1.1",
-    "sharp": "^0.20.8",
+    "sequelize": "^4.41.0",
+    "sequelize-cli": "^5.2.0",
+    "sharp": "^0.21.0",
     "uuid": "^3.3.2"
   }
 }
