feat: use environment variables instead plain js config

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ NODE_ENV=development
 
 SECRET_KEY=super-secret-key-readerfront-api
 
-DB_USER=root
-DB_PASS=
-DB_NAME=reivens
+DB_USER=USER
+DB_PASS=PASS
+DB_NAME=DBNAME
 DB_HOSTNAME=127.0.0.1
 DB_DIALECT=mysql
 
