--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "archiver": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
