feat: add SendGrid to handle SMTP

--- a/.env
+++ b/.env
@@ -12,6 +12,5 @@ DB_DIALECT=mysql
 APP_URL=http://localhost:3000/
 API_URL=http://localhost:8000/
 
-EMAIL_HOST=gmail
-EMAIL_USER=YOUR_EMAIL
-EMAIL_PASSWORD=PASS
+SENDGRID_API=YOUR_API_KEY
+EMAIL=YOUR_EMAIL
