--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "multer": "^1.4.1",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^4.41.0",
     "sequelize-cli": "^5.2.0",
     "sharp": "^0.21.0",
