--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.1.0",
     "express": "^5.0.0-alpha.6",
     "express-graphql": "^0.6.12",
