--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.2.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.9.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.1.2",
+    "husky": "^1.1.4",
     "jest": "^23.6.0",
-    "nodemon": "~1.18.4",
-    "prettier": "^1.14.3",
+    "nodemon": "^1.18.6",
+    "prettier": "^1.15.2",
     "pretty-quick": "^1.8.0",
     "sequelize-test-utils": "^0.3.0",
     "standard-version": "^4.4.0"
@@ -54,25 +54,25 @@
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "date-fns": "^1.29.0",
     "dotenv": "^6.1.0",
     "express": "^5.0.0-alpha.6",
-    "express-graphql": "^0.6.12",
+    "express-graphql": "^0.7.1",
     "feed": "^2.0.1",
-    "fs-extra": "^7.0.0",
+    "fs-extra": "^7.0.1",
     "graphql": "^14.0.2",
     "graphql-date": "^1.0.3",
     "graphql-depth-limit": "^1.1.0",
-    "graphql-tools": "^4.0.2",
-    "jsonwebtoken": "^8.3.0",
+    "graphql-tools": "^4.0.3",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "mysql2": "^1.6.1",
-    "nodemailer": "^4.6.8",
+    "mysql2": "^1.6.4",
+    "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "sequelize": "^4.41.0",
-    "sequelize-cli": "^5.2.0",
+    "sequelize": "^4.41.2",
+    "sequelize-cli": "^5.3.0",
     "sharp": "^0.21.0",
     "uuid": "^3.3.2"
   },
