--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,7 @@ DB_DIALECT=mysql
 APP_URL=http://localhost:3000/
 API_URL=http://localhost:8000/
 
+REACT_APP_APP_TITLE=Reader Front
+
 SENDGRID_API=YOUR_API_KEY
 EMAIL=YOUR_EMAIL
