--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ NODE_ENV=development
 
 SECRET_KEY=super-secret-key-readerfront-api
 
+GRAPHQL_IDE=true
+
 DB_USER=USER
 DB_PASS=PASS
 DB_NAME=DBNAME
