--- a/package.json
+++ b/package.json
@@ -29,22 +29,41 @@
     "test": "jest"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/runtime": "^7.3.1",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-jest": "^24.1.0",
     "cross-env": "^5.2.0",
-    "eslint": "^5.9.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.6",
-    "prettier": "^1.15.2",
-    "pretty-quick": "^1.8.0",
+    "jest": "^24.1.0",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
     "sequelize-test-utils": "^0.3.0",
     "standard-version": "^4.4.0"
   },
@@ -53,7 +72,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "cookie-parser": "^1.4.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
@@ -61,19 +80,19 @@
     "express-graphql": "^0.7.1",
     "feed": "^2.0.2",
     "fs-extra": "^7.0.1",
-    "graphql": "^14.0.2",
+    "graphql": "^14.1.1",
     "graphql-date": "^1.0.3",
     "graphql-depth-limit": "^1.1.0",
-    "graphql-tools": "^4.0.3",
+    "graphql-tools": "^4.0.4",
     "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "mysql2": "^1.6.4",
+    "mysql2": "^1.6.5",
     "nodemailer": "^5.1.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
-    "sharp": "^0.21.2",
+    "sharp": "^0.21.3",
     "uuid": "^3.3.2"
   },
   "husky": {
