--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "build:prod": "babel src -s -D -d build",
     "start:server": "cross-env NODE_ENV=production node build/index.js",
     "release": "standard-version",
-    "test": "jest",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -94,13 +92,11 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^5.8.10",
     "sequelize-cli": "^5.5.0",
-    "uuid": "^3.3.2",
-    "snyk": "^1.151.2"
+    "uuid": "^3.3.2"
   },
   "husky": {
     "hooks": {
       "pre-commit": "yarn lint && yarn prettier"
     }
-  },
-  "snyk": true
+  }
 }
