--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^5.16.0",
     "sequelize-cli": "^5.5.0",
+    "sharp": "^0.23.0",
     "uuid": "^3.3.3"
   },
   "husky": {
