--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "graphql-tools": "^4.0.6",
     "graphql-type-json": "^0.3.0",
     "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
